--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                         <thead>
                             <tr>
                                 <th scope="col">Titolo</th>
-                                <th scope="col" class="d-none d-md-table-cell text-center">
+                                <th scope="col" class="d-none d-md-table-cell text-center text-nowrap">
                                     Data prestito
                                 </th>
-                                <th scope="col" class="text-center">Stato</th>
-                                <th scope="col" class="text-end">Azioni</th>
+                                <th scope="col" class="text-startr">Stato</th>
+                                <th scope="col" class="text-center">Azioni</th>
                             </tr>
                         </thead>
 
@@ -88,15 +88,15 @@
                             <tr>
                                 <td>I pilastri della terra</td>
                                 <td class="d-none d-md-table-cell text-center">-</td>
-                                <td class="text-center">
-                                    <span class="badge text-bg-success">Disponibile</span>
+                                <td class="text-start">
+                                    <span class="badge text-bg-success ">Disponibile</span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -105,15 +105,15 @@
                             <tr>
                                 <td>I promessi sposi</td>
                                 <td class="d-none d-md-table-cell text-center">-</td>
-                                <td class="text-center">
+                                <td class="text-start">
                                     <span class="badge text-bg-success">Disponibile</span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -122,17 +122,17 @@
                             <tr>
                                 <td>Il signore degli anelli</td>
                                 <td class="d-none d-md-table-cell text-center">18/10/2023</td>
-                                <td class="text-center">
+                                <td class="text-start">
                                     <span class="badge text-bg-warning text-white">
                                         In prestito
                                     </span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -141,15 +141,15 @@
                             <tr>
                                 <td>Harry Potter e la pietra filosofale</td>
                                 <td class="d-none d-md-table-cell text-center">-</td>
-                                <td class="text-center">
+                                <td class="text-start">
                                     <span class="badge text-bg-success">Disponibile</span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -158,15 +158,15 @@
                             <tr>
                                 <td>Il Codice Da Vinci</td>
                                 <td class="d-none d-md-table-cell text-center">-</td>
-                                <td class="text-center">
+                                <td class="text-start">
                                     <span class="badge text-bg-danger">Non Disponibile</span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -175,15 +175,15 @@
                             <tr>
                                 <td>Shining</td>
                                 <td class="d-none d-md-table-cell text-center">-</td>
-                                <td class="text-center">
+                                <td class="text-start">
                                     <span class="badge text-bg-success">Disponibile</span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -192,17 +192,17 @@
                             <tr>
                                 <td>La Divina Commedia</td>
                                 <td class="d-none d-md-table-cell text-center">21/09/2023</td>
-                                <td class="text-center">
+                                <td class="text-start">
                                     <span class="badge text-bg-warning text-white">
                                         In prestito
                                     </span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -211,15 +211,15 @@
                             <tr>
                                 <td>Il trono di spade</td>
                                 <td class="d-none d-md-table-cell text-center">-</td>
-                                <td class="text-center">
+                                <td class="text-start">
                                     <span class="badge text-bg-success">Disponibile</span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -228,15 +228,15 @@
                             <tr>
                                 <td>Il mondo di Sofia</td>
                                 <td class="d-none d-md-table-cell text-center">-</td>
-                                <td class="text-center">
+                                <td class="text-start">
                                     <span class="badge text-bg-danger">Disponibile</span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -245,17 +245,17 @@
                             <tr>
                                 <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
                                 <td class="d-none d-md-table-cell text-center">25/07/2023</td>
-                                <td class="text-center">
+                                <td class="text-start">
                                     <span class="badge text-bg-warning text-white">
                                         In prestito
                                     </span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -264,15 +264,15 @@
                             <tr>
                                 <td>Il piccolo principe</td>
                                 <td class="d-none d-md-table-cell text-center">-</td>
-                                <td class="text-center">
+                                <td class="text-start">
                                     <span class="badge text-bg-success">Disponibile</span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -281,15 +281,15 @@
                             <tr>
                                 <td>La storia infinita</td>
                                 <td class="d-none d-md-table-cell text-center">-</td>
-                                <td class="text-center">
+                                <td class="text-start">
                                     <span class="badge text-bg-success">Disponibile</span>
                                 </td>
-                                <td class="text-end">
-                                    <div class="btn-group btn-group-sm" role="group">
-                                        <button class="btn btn-outline-secondary">
+                                <td class="text-center">
+                                    <div class="d-flex gap-1">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-pencil-fill"></i>
                                         </button>
-                                        <button class="btn btn-outline-secondary">
+                                        <button class="btn btn-outline-secondary btn-sm rounded">
                                             <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
@@ -300,9 +300,9 @@
                     </table>
                 </div>
             </div>
+            
             <div class="col-12 col-lg-4">
-
-
+                
                 <!-- tabella Todo -->
                 <ul class="list-group my-4">
                     <li class="list-group-item fs-3 text bg-body-secondary">
