add second page of site

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <!-- titolo e bottone  -->
                 <div class="d-flex justify-content-between align-items-center mb-3 my-4">
                     <h5 class="mb-0">Catalogo Libri</h5>
-                    <button class="btn btn-primary btn-sm">Aggiungi Libro</button>
+                    <a class="btn btn-primary btn-sm" href="add-book.html">Aggiungi Libro</a>
                 </div>
 
                 <!-- catalogo libri -->
