--- a/add-book.html
+++ b/add-book.html
@@ -62,7 +62,7 @@
         <main>
 
             <!-- header new page -->
-            <h5 class="my-3">Nuovo Libro</h5>
+            <h4 class="my-3">Nuovo Libro</h4>
 
 
             <!-- form nome e cognome autore -->
@@ -152,7 +152,18 @@
             <hr class="mt-5">
 
 
+            <!-- form note libro -->
+            <div class="my-4">
+                <form>
+                    <label for="exampleFormControlTextarea1" class="form-label fw-medium">Note</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                        placeholder="Inserisci eventuali note sul libro"></textarea>
+                </form>
+            </div>
+
+
         </main>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
