add form check and add-book button

--- a/add-book.html
+++ b/add-book.html
@@ -162,6 +162,22 @@
             </div>
 
 
+            <!-- versione digitale -->
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="checkIndeterminate">
+                <label class="form-check-label" for="checkIndeterminate">
+                    Disponibile anche in digitale
+                </label>
+            </div>
+
+
+            <!-- bottone per aggiungere il libro -->
+            <div class="mt-3">
+                <form>
+                    <button type="submit" class="btn btn-primary">Aggiungi Libro</button>
+                </form>
+            </div>
+
         </main>
 
     </div>
