--- a/add-book.html
+++ b/add-book.html
@@ -105,9 +105,9 @@
                                 </label>
                                 <input type="text" placeholder="Inserisci titolo del libro" class="form-control"
                                     id="exampleInputbook-Name1" aria-describedby="book-nameHelp">
-                            </div>
-                            <div id="book-nameHelp" class="form-text mt-n4">
-                                Titolo versione italiana
+                                <div id="book-nameHelp" class="form-text">
+                                    Titolo versione italiana
+                                </div>
                             </div>
                         </form>
                     </div>
